--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Knowledge Villa || Home</title>
+    <!-- favicon icon -->
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <!-- font Awesome Icons -->
     <link
       rel="stylesheet"
@@ -16,37 +18,40 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- start of navbar -->
-    <nav class="navbar">
-      <!-- logo -->
-      <div class="nav-center">
-        <div class="logo">
-          <a href="index.html"
-            ><h4>Knowledge <span>Villa</span></h4></a
-          >
-        </div>
-        <!-- list -->
-        <span class="icon">
-          <i class="fa-solid fa-bars-staggered"></i>
-        </span>
-      </div>
-    </nav>
-    <!-- end of navbar -->
-    <!-- start of header -->
-    <!-- header start -->
-    <header class="header">
-      <!-- start of Hero -->
+    <!-- header  -->
+    <header id="home">
+      <!-- navbar -->
+      <!-- hero -->
       <div class="hero">
-        <h2>Acquire New Skills by</h2>
-        <h1>
-          Investing in Your <br />
-          <span class="special">Professional Growth</span>
-        </h1>
-        <a href="#" class="btn hero-btn">explore</a>
+        <div class="hero-banner">
+          <h1>UpSkill Yourself</h1>
+          <p>
+            We provide you with the best Mentorship Programmes in the hottest
+            Industry along with curated Internship Opportunities.
+          </p>
+          <a href="#" class="btn hero-btn scroll-link">explore Courses</a>
+        </div>
       </div>
-      <!-- end of Hero -->
     </header>
-    <!-- header end -->
-    <!-- end of header -->
+    <!-- end of header  -->
+
+    <!-- about section -->
+    <!-- end of about section -->
+
+    <!-- services -->
+    <!--end services -->
+
+    <!-- featured tours -->
+    <!-- end of featured tours -->
+
+    <!-- contact -->
+
+    <!-- end of contact -->
+
+    <!-- gallery  -->
+
+    <!-- end of gallery  -->
+
+    <!-- footer -->
   </body>
 </html>
