knowledge villa navbar continue

--- a/index.html
+++ b/index.html
@@ -21,6 +21,52 @@
     <!-- header  -->
     <header id="home">
       <!-- navbar -->
+      <nav class="navbar">
+        <!-- navbar header -->
+        <div class="nav-header">
+          <button class="profile" id="profile">
+            <i class="fa-solid fa-user"></i>
+          </button>
+          <div class="logo-container">
+            <a href="index.html" class="nav-logo"
+              >Knowledge<span>Villa</span></a
+            >
+            <button type="submit" class="nav-toggle" id="nav-toggle">
+              <i class="fa-solid fa-bars-staggered"></i>
+            </button>
+          </div>
+        </div>
+        <!-- end of navbar header -->
+        <!-- nav-links -->
+        <ul class="nav-links" id="nav-links">
+          <!-- single link -->
+          <li>
+            <a href="#home" class="nav-link scroll-link">Home</a>
+          </li>
+          <!-- end of single link -->
+          <!-- single link -->
+          <li>
+            <a href="#courses" class="nav-link scroll-link">Courses</a>
+          </li>
+          <!-- end of single link -->
+          <!-- single link -->
+          <li>
+            <a href="#program" class="nav-link scroll-link">Programs</a>
+          </li>
+          <!-- end of single link -->
+          <!-- single link -->
+          <li>
+            <a href="#about" class="nav-link scroll-link">About Us</a>
+          </li>
+          <!-- end of single link -->
+          <!-- single link -->
+          <li>
+            <a href="#contact" class="nav-link scroll-link">Contact us</a>
+          </li>
+          <!-- end of single link -->
+        </ul>
+        <!--end of nav-links -->
+      </nav>
       <!-- hero -->
       <div class="hero">
         <div class="hero-banner">
@@ -53,5 +99,7 @@
     <!-- end of gallery  -->
 
     <!-- footer -->
+    <!-- script -->
+    <script src="./script/script.js"></script>
   </body>
 </html>
