--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       rel="stylesheet"
       href="./fontawesome-free-5.12.1-web/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- css -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -18,7 +25,9 @@
       <div class="nav-center">
         <!-- nav header -->
         <div class="nav-header">
-          <img src="./images/logo.svg" alt="" class="nav-logo" />
+          <div class="nav-logo">
+            <h3>Knowledge <span>Villa</span></h3>
+          </div>
           <button class="nav-btn" id="nav-btn">
             <i class="fas fa-bars"></i>
           </button>
@@ -30,13 +39,13 @@
             <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="index.html">Courses</a>
+            <a href="courses.html">Courses</a>
           </li>
           <li>
-            <a href="index.html">About us</a>
+            <a href="about.html">About</a>
           </li>
           <li>
-            <a href="index.html">Contact us</a>
+            <a href="contact.html">Contact</a>
           </li>
         </ul>
         <!-- end of nav-links -->
@@ -44,10 +53,89 @@
     </nav>
     <!-- end of navbar -->
     <!-- sidebar -->
-
+    <aisde class="sidebar" id="sidebar">
+      <div>
+        <button class="close-btn" id="close-btn">
+          <i class="fas fa-times"></i>
+        </button>
+        <!-- sidebar-links -->
+        <ul class="sidebar-links">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="courses.html">Courses</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+        <!-- end of sidebar-links -->
+        <!-- social icons -->
+        <ul class="social-icons">
+          <li>
+            <a href="#" class="social-icon">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-icon">
+              <i class="fab fa-youtube"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-icon">
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-icon">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </li>
+        </ul>
+        <!-- end of social icons -->
+      </div>
+    </aisde>
     <!-- end of sidebar -->
     <!-- header -->
-
+    <header class="hero">
+      <div class="section-center hero-center">
+        <!-- hero-info -->
+        <article class="hero-info">
+          <h1>Innovate. Educate. Elevate.</h1>
+          <h4>
+            Where we ignite innovation, empower through education, and elevate
+            individuals to new heights of success. Join us as we shape the
+            future of technology together.
+          </h4>
+          <!-- social icons -->
+          <ul class="hero-icons">
+            <li><i class="fa-solid fa-briefcase"></i> Indusrial experts</li>
+            <li><i class="fa-solid fa-users-rectangle"></i> Live Classes</li>
+            <li><i class="fa fa-handshake"></i> Affordable Price</li>
+          </ul>
+          <!-- hero buttons -->
+          <div class="hero-btns">
+            <a href="courses.html" class="btn hero-btn">exolre</a>
+            <a href="#" class="btn hero-btn">Talk to expert</a>
+          </div>
+          <!-- end of social icons -->
+        </article>
+        <!-- hero img -->
+        <article class="hero-img">
+          <img src="./images/hero-img.jpg" alt="" />
+        </article>
+      </div>
+    </header>
     <!-- end of header -->
     <!-- about -->
 
