--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </header>
     <!-- end of header -->
     <!-- about -->
-
+    <section class="about"></section>
     <!-- end of about -->
     <!-- services -->
 
