about section completed

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       <div class="section-center hero-center">
         <!-- hero-info -->
         <article class="hero-info">
+          <div class="underline"></div>
           <h1>Innovate. Educate. Elevate.</h1>
           <h4>
             Where we ignite innovation, empower through education, and elevate
@@ -132,13 +133,66 @@
         </article>
         <!-- hero img -->
         <article class="hero-img">
-          <img src="./images/hero-img.jpg" alt="" />
+          <img src="./images/hero-img.jpg" class="hero-photo" />
         </article>
       </div>
     </header>
     <!-- end of header -->
     <!-- about -->
-    <section class="about"></section>
+    <section class="section about">
+      <div class="section-center about-center">
+        <!-- about img -->
+        <article class="about-img">
+          <img
+            src="./images/about-img.jpg"
+            class="hero-photo"
+            alt="about img"
+          />
+        </article>
+        <!-- about-info -->
+        <article class="about-info">
+          <!-- section title -->
+          <div class="section-title about-title">
+            <h2>About</h2>
+            <div class="underline"></div>
+          </div>
+          <!-- <p>
+            Knowledge Villa is a premier provider of technical courses designed
+            to equip individuals with the skills needed to thrive in today's
+            dynamic tech industry. Our hands-on approach, led by industry
+            experts, ensures practical learning and real-world application
+            across various domains including programming, data science,
+            cybersecurity, and more. With flexible learning options and a
+            commitment to excellence, we empower learners to succeed in their
+            tech careers. Join us and unlock your potential with Knowledge
+            Villa.
+          </p> -->
+          <p>
+            Knowledge Villa is a leading provider of technical courses,
+            specializing in empowering individuals with the skills necessary to
+            excel in today's fast-paced technological landscape. Our
+            comprehensive curriculum covers a wide range of technical domains,
+            including programming languages, software development, data science,
+            cybersecurity, and artificial intelligence. Led by industry experts,
+            our hands-on approach ensures practical learning and real-world
+            application, allowing students to gain valuable experience and
+            expertise.
+          </p>
+          <p>
+            At Knowledge Villa, we are committed to providing flexible learning
+            options and personalized support to help students achieve their
+            goals. Whether you are a beginner looking to enter the tech industry
+            or a seasoned professional aiming to advance your skill set,
+            Knowledge Villa offers the resources and guidance you need to
+            succeed. Join us on a journey of knowledge and growth, and let
+            Knowledge Villa be your partner in shaping a successful career in
+            technology.
+          </p>
+          <a href="about.html" class="btn about-btn">About Us</a>
+          <!-- end of section title -->
+        </article>
+      </div>
+    </section>
     <!-- end of about -->
     <!-- services -->
 
