favicon icon added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Knowledge Villa || Home</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -156,17 +157,6 @@
             <h2>About</h2>
             <div class="underline"></div>
           </div>
-          <!-- <p>
-            Knowledge Villa is a premier provider of technical courses designed
-            to equip individuals with the skills needed to thrive in today's
-            dynamic tech industry. Our hands-on approach, led by industry
-            experts, ensures practical learning and real-world application
-            across various domains including programming, data science,
-            cybersecurity, and more. With flexible learning options and a
-            commitment to excellence, we empower learners to succeed in their
-            tech careers. Join us and unlock your potential with Knowledge
-            Villa.
-          </p> -->
           <p>
             Knowledge Villa is a leading provider of technical courses,
             specializing in empowering individuals with the skills necessary to
