partners section completed

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
             <h2>About</h2>
             <div class="underline"></div>
           </div>
+          <!-- end of section title -->
           <p>
             Knowledge Villa is a leading provider of technical courses,
             specializing in empowering individuals with the skills necessary to
@@ -179,19 +180,188 @@
             technology.
           </p>
           <a href="about.html" class="btn about-btn">About Us</a>
-          <!-- end of section title -->
         </article>
       </div>
     </section>
     <!-- end of about -->
-    <!-- services -->
-
-    <!-- end of services -->
-    <!-- projects -->
-
-    <!-- end of projects -->
+    <!-- courses -->
+    <section class="section bg-grey">
+      <!-- section title -->
+      <div class="section-title course-title">
+        <h2>Courses</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="courses-center section-center">
+        <!-- single course -->
+        <article class="course">
+          <i class="fas fa-code course-icon"></i>
+          <h4>Web development</h4>
+          <div class="underline"></div>
+          <p>
+            Our Web Development Course provides a condensed yet thorough
+            introduction to creating modern and interactive websites. Led by
+            industry professionals, this hands-on course covers essential skills
+            such as HTML, CSS, JavaScript, and responsive design principles.
+            Join us to kickstart your journey in web development.
+          </p>
+        </article>
+        <!-- end of single course -->
+        <!-- single course -->
+        <article class="course">
+          <i class="fa-solid fa-cube course-icon"></i>
+          <h4>Data science</h4>
+          <div class="underline"></div>
+          <p>
+            Our Data Science Course offers a concise yet comprehensive
+            exploration of the field, providing essential skills and knowledge
+            needed to excel in data analysis and interpretation. Led by seasoned
+            professionals, this hands-on course covers key topics including data
+            manipulation, statistical analysis, machine learning, and data
+            visualization. Join us to dive into the exciting world of data
+            science.
+          </p>
+        </article>
+        <!-- end of single course -->
+        <!-- single course -->
+        <article class="course">
+          <i class="fa-solid fa-shield-halved course-icon"></i>
+          <h4>Cyber Security</h4>
+          <div class="underline"></div>
+          <p>
+            Our Cybersecurity Course delivers a condensed yet comprehensive
+            overview of cybersecurity fundamentals, equipping students with
+            essential knowledge and skills to protect digital assets
+            effectively. Led by industry experts, this hands-on course covers
+            topics such as network security, cryptography, ethical hacking, and
+            incident response. Join us to safeguard digital environments with
+            confidence.
+          </p>
+        </article>
+        <!-- end of single course -->
+      </div>
+      <div class="section-btn">
+        <a href="courses.html" class="btn">Explore Courses</a>
+      </div>
+    </section>
+    <!-- end of courses -->
+    <!-- events -->
+    <section class="events section">
+      <!-- section title -->
+      <div class="section-title events-title">
+        <h2>Latest Events</h2>
+        <div class="underline"></div>
+        <p class="events-text">
+          Join us for our upcoming events where we'll explore the latest trends
+          and innovations shaping various industries. From insightful panel
+          discussions to hands-on workshops, our events offer valuable
+          networking opportunities and expert insights to help you stay ahead in
+          your field. Whether you're interested in tech, business, or creative
+          arts, there's something for everyone. Don't miss out – mark your
+          calendars and join us for an unforgettable experience!
+        </p>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center events-center">
+        <!-- single event -->
+        <a href="#" class="event-1">
+          <article class="event">
+            <img
+              src="./images/project-1.jpeg"
+              alt="single event"
+              class="event-img"
+            />
+            <div class="event-info">
+              <h4>event title</h4>
+              <p>organizer</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of single event -->
+        <!-- single event -->
+        <a href="#" class="event-2">
+          <article class="event">
+            <img
+              src="./images/project-2.jpeg"
+              alt="single event"
+              class="event-img"
+            />
+            <div class="event-info">
+              <h4>event title</h4>
+              <p>organizer</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of single event -->
+        <!-- single event -->
+        <a href="#" class="event-3">
+          <article class="event">
+            <img
+              src="./images/project-3.jpeg"
+              alt="single event"
+              class="event-img"
+            />
+            <div class="event-info">
+              <h4>event title</h4>
+              <p>organizer</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of single event -->
+        <!-- single event -->
+        <a href="#" class="event-4">
+          <article class="event">
+            <img
+              src="./images/project-4.jpeg"
+              alt="single event"
+              class="event-img"
+            />
+            <div class="event-info">
+              <h4>event title</h4>
+              <p>organizer</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of single event -->
+      </div>
+      <div class="section-btn">
+        <a href="events.html" class="btn">check our events</a>
+      </div>
+    </section>
+    <!-- end of events -->
     <!-- connect -->
-
+    <section class="connect">
+      <video
+        controls
+        autoplay
+        muted
+        loop
+        poster="./images/project-1.jpeg"
+        class="video-container"
+      >
+        <source src="./videos/connect.mp4" type="video/mp4" />
+      </video>
+      <div class="video-banner">
+        <!-- section title -->
+        <div class="section-title events-title">
+          <h2>Our Partners</h2>
+          <div class="underline"></div>
+        </div>
+        <!--end of section title -->
+        <p class="video-text">
+          Our esteemed hiring partners represent a diverse array of industries,
+          ranging from technology and finance to healthcare and beyond.
+          Committed to excellence, they offer rewarding career opportunities
+          across various roles and levels. Through collaborative efforts, our
+          hiring partners provide valuable mentorship, professional development
+          resources, and networking opportunities to help individuals thrive in
+          their respective fields. Join us and gain access to a network of
+          reputable hiring partners dedicated to supporting your career growth
+          and success.
+        </p>
+        <a href="#" class="btn">Our partners</a>
+      </div>
+    </section>
     <!-- end of connect -->
     <!-- skills -->
 
