connect overflow error fixed

--- a/index.html
+++ b/index.html
@@ -352,12 +352,9 @@
           Our esteemed hiring partners represent a diverse array of industries,
           ranging from technology and finance to healthcare and beyond.
           Committed to excellence, they offer rewarding career opportunities
-          across various roles and levels. Through collaborative efforts, our
-          hiring partners provide valuable mentorship, professional development
-          resources, and networking opportunities to help individuals thrive in
-          their respective fields. Join us and gain access to a network of
-          reputable hiring partners dedicated to supporting your career growth
-          and success.
+          across various roles and levels. Join us and gain access to a network
+          of reputable hiring partners dedicated to supporting your career
+          growth and success.
         </p>
         <a href="#" class="btn">Our partners</a>
       </div>
