--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <a href="courses.html">Courses</a>
           </li>
           <li>
+            <a href="events.html">Events</a>
+          </li>
+          <li>
             <a href="about.html">About</a>
           </li>
           <li>
@@ -66,6 +69,9 @@
           </li>
           <li>
             <a href="courses.html">Courses</a>
+          </li>
+          <li>
+            <a href="events.html">Events</a>
           </li>
           <li>
             <a href="about.html">About</a>
