knowledge villa homepage completd

--- a/index.html
+++ b/index.html
@@ -366,17 +366,353 @@
       </div>
     </section>
     <!-- end of connect -->
-    <!-- skills -->
-
-    <!-- end of skills -->
-    <!-- timeline -->
-
-    <!--end of  timeline -->
+    <!-- ratings -->
+    <section class="ratings section">
+      <!-- section title -->
+      <div class="section-title ratings-title">
+        <h2>Students Rating</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center ratings-center">
+        <!-- single course -->
+        <article>
+          <h3>Course title</h3>
+          <!-- single rating -->
+          <div class="rating">
+            <p>Student Name</p>
+            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae
+              odit hic similique porro nisi delectus ratione aperiam labore,
+              eveniet rem!
+            </p>
+          </div>
+          <!--end of single rating -->
+          <!-- single rating -->
+          <div class="rating">
+            <p>Student Name</p>
+            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae
+              odit hic similique porro nisi delectus ratione aperiam labore,
+              eveniet rem!
+            </p>
+          </div>
+          <!--end of single rating -->
+          <!-- single rating -->
+          <div class="rating">
+            <p>Student Name</p>
+            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae
+              odit hic similique porro nisi delectus ratione aperiam labore,
+              eveniet rem!
+            </p>
+          </div>
+          <!--end of single rating -->
+        </article>
+        <!-- end of single course -->
+        <!-- single course -->
+        <article>
+          <h3>Course title</h3>
+          <!-- single rating -->
+          <div class="rating">
+            <p>Student Name</p>
+            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae
+              odit hic similique porro nisi delectus ratione aperiam labore,
+              eveniet rem!
+            </p>
+          </div>
+          <!--end of single rating -->
+          <!-- single rating -->
+          <div class="rating">
+            <p>Student Name</p>
+            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae
+              odit hic similique porro nisi delectus ratione aperiam labore,
+              eveniet rem!
+            </p>
+          </div>
+          <!--end of single rating -->
+          <!-- single rating -->
+          <div class="rating">
+            <p>Student Name</p>
+            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+            ><i class="fa-solid fa-star"></i>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae
+              odit hic similique porro nisi delectus ratione aperiam labore,
+              eveniet rem!
+            </p>
+          </div>
+          <!--end of single rating -->
+        </article>
+        <!-- end of single course -->
+      </div>
+    </section>
+    <!-- end of ratings -->
+    <!-- pathway -->
+    <section class="section pathway">
+      <!-- section title -->
+      <div class="section-title ratings-title">
+        <h2>Pathway of excellence</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center pathway-center">
+        <!-- single pathway -->
+        <article class="pathway-item">
+          <h4>Enrollment</h4>
+          <p>
+            Begin your journey by enrolling in our comprehensive program.
+            Whether it's a course in web development, data science, or
+            cybersecurity, our enrollment process is straightforward and
+            hassle-free. Simply visit our website, choose your desired program,
+            and follow the steps to complete your enrollment.
+          </p>
+          <span class="number">1</span>
+        </article>
+        <!-- end of single pathway -->
+        <!-- single pathway -->
+        <article class="pathway-item">
+          <h4>Training and Skill Development</h4>
+          <p>
+            Once enrolled, dive into our rigorous training curriculum led by
+            industry experts. Gain hands-on experience, master essential skills,
+            and stay updated on the latest trends and technologies relevant to
+            your field. Our courses are designed to equip you with the knowledge
+            and expertise needed to excel in your chosen domain.
+          </p>
+          <span class="number">2</span>
+        </article>
+        <!-- end of single pathway -->
+        <!-- single pathway -->
+        <article class="pathway-item">
+          <h4>Project Work and Practical Experience</h4>
+          <p>
+            Put your newly acquired skills to the test through real-world
+            projects and practical assignments. Gain valuable experience as you
+            work on industry-relevant projects, honing your abilities and
+            building a robust portfolio that showcases your capabilities to
+            potential employers.
+          </p>
+          <span class="number">3</span>
+        </article>
+        <!-- end of single pathway -->
+        <!-- single pathway -->
+        <article class="pathway-item">
+          <h4>Career Guidance and Support</h4>
+          <p>
+            Receive personalized career guidance and support from our dedicated
+            team. From resume building to interview preparation, we provide
+            comprehensive assistance to help you navigate the job market with
+            confidence. Take advantage of mock interviews, networking
+            opportunities, and career counseling sessions tailored to your
+            needs.
+          </p>
+          <span class="number">4</span>
+        </article>
+        <!-- end of single pathway -->
+        <!-- single pathway -->
+        <article class="pathway-item">
+          <h4>Networking and Industry Connections</h4>
+          <p>
+            Leverage our vast network of hiring partners and industry
+            connections to explore job opportunities. Attend networking events,
+            career fairs, and industry meet-ups to expand your professional
+            network and connect with potential employers. Our partnerships with
+            leading companies ensure that you have access to a wide range of job
+            openings across various sectors.
+          </p>
+          <span class="number">5</span>
+        </article>
+        <!-- end of single pathway -->
+        <!-- single pathway -->
+        <article class="pathway-item">
+          <h4>Job Placement Assistance</h4>
+          <p>
+            Benefit from our job placement assistance services designed to match
+            you with suitable employment opportunities. We work closely with our
+            hiring partners to identify job openings that align with your
+            skills, interests, and career goals. Receive guidance throughout the
+            application process, from submitting your resume to acing the
+            interview.
+          </p>
+          <span class="number">6</span>
+        </article>
+        <!-- end of single pathway -->
+        <!-- single pathway -->
+        <article class="pathway-item">
+          <h4>Securing a Job</h4>
+          <p>
+            With the support of our training, career guidance, and job placement
+            services, land your dream job in your desired field. Celebrate your
+            success as you embark on a fulfilling career journey, equipped with
+            the skills, confidence, and connections needed to thrive in the
+            competitive job market.
+          </p>
+          <span class="number">7</span>
+        </article>
+        <!-- end of single pathway -->
+      </div>
+    </section>
+    <!--end of pathway -->
     <!-- blog -->
-
+    <section class="section blog">
+      <!-- section title -->
+      <div class="section-title ratings-title">
+        <h2>Blog</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center blog-center">
+        <!-- single article -->
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <img src="./images/project-1.jpeg" alt="" />
+            <div class="card-info">
+              <h4>Article Title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                sunt veniam blanditiis! Voluptatibus quidem sunt, quae laborum
+                maiores voluptatum animi?
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- back of the card -->
+          <div class="card-side card-back">
+            <button class="btn">read more</button>
+          </div>
+        </div>
+        <!-- end of single article -->
+        <!-- single article -->
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <img src="./images/project-2.jpeg" alt="" />
+            <div class="card-info">
+              <h4>Article Title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                sunt veniam blanditiis! Voluptatibus quidem sunt, quae laborum
+                maiores voluptatum animi?
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- back of the card -->
+          <div class="card-side card-back">
+            <button class="btn">read more</button>
+          </div>
+        </div>
+        <!-- end of single article -->
+        <!-- single article -->
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <img src="./images/project-3.jpeg" alt="" />
+            <div class="card-info">
+              <h4>Article Title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                sunt veniam blanditiis! Voluptatibus quidem sunt, quae laborum
+                maiores voluptatum animi?
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- back of the card -->
+          <div class="card-side card-back">
+            <button class="btn">read more</button>
+          </div>
+        </div>
+        <!-- end of single article -->
+        <!-- single article -->
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <img src="./images/project-4.jpeg" alt="" />
+            <div class="card-info">
+              <h4>Article Title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                sunt veniam blanditiis! Voluptatibus quidem sunt, quae laborum
+                maiores voluptatum animi?
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- back of the card -->
+          <div class="card-side card-back">
+            <button class="btn">read more</button>
+          </div>
+        </div>
+        <!-- end of single article -->
+      </div>
+    </section>
     <!--end of  blog -->
     <!-- footer -->
-
+    <footer class="footer">
+      <!-- social icons -->
+      <ul class="social-icons">
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-youtube"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+      </ul>
+      <!-- end of social icons -->
+      <p>&copy; <span id="date"></span> Knowledge Villa. all rights reserved</p>
+    </footer>
     <script src="./js/app.js"></script>
   </body>
 </html>
