--- a/courses.html
+++ b/courses.html
@@ -128,7 +128,7 @@
         <article class="single-course">
           <div class="course-container">
             <img src="./images/web-d.jpg" alt="" />
-            <a href="" class="course-icon">
+            <a href="" class="courses-icon">
               <i class="fas fa-code"></i>
             </a>
           </div>
@@ -151,7 +151,7 @@
         <article class="single-course">
           <div class="course-container">
             <img src="./images/data-sci.jpg" alt="" />
-            <a href="" class="course-icon">
+            <a href="" class="courses-icon">
               <i class="fa fa-cube"></i>
             </a>
           </div>
@@ -176,7 +176,7 @@
         <article class="single-course">
           <div class="course-container">
             <img src="./images/cyber.jpg" alt="" />
-            <a href="" class="course-icon">
+            <a href="" class="courses-icon">
               <i class="fa fa-shield-halved"></i>
             </a>
           </div>
@@ -201,7 +201,7 @@
         <article class="single-course">
           <div class="course-container">
             <img src="./images/ai.jpg" alt="" />
-            <a href="" class="course-icon">
+            <a href="" class="courses-icon">
               <i class="fa-solid fa-robot"></i>
             </a>
           </div>
