--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,10 @@
         </li>
       </ul>
       <!-- end of social icons -->
-      <p>&copy; <span id="date"></span> Knowledge Villa. all rights reserved</p>
+      <p>
+        Copyright &copy; <span id="date"></span> Knowledge Villa. all rights
+        reserved
+      </p>
     </footer>
     <script src="./js/app.js"></script>
   </body>
