--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- nav header -->
         <div class="nav-header">
           <div class="nav-logo">
-            <h3>Knowledge <span>Villa</span></h3>
+            <h3>Writo <span>Education</span></h3>
           </div>
           <button class="nav-btn" id="nav-btn">
             <i class="fas fa-bars"></i>
