Make some changes

--- a/index.html
+++ b/index.html
@@ -134,7 +134,11 @@
           <!-- hero buttons -->
           <div class="hero-btns">
             <a href="courses.html" class="btn hero-btn">exolre</a>
-            <a href="#" class="btn hero-btn">Talk to expert</a>
+            <a
+              href="https://tawk.to/chat/66471d769a809f19fb31f49a/1hu2sm6r4"
+              class="btn hero-btn"
+              >Talk to expert</a
+            >
           </div>
           <!-- end of social icons -->
         </article>
